Add functionality to remove keywords from article
